fix: adjust z-index of dropdown menu so it appears in front of other content

--- a/my-portfolio/src/components/navbar.css
+++ b/my-portfolio/src/components/navbar.css
@@ -9,6 +9,7 @@
     margin-left: 10px;
     color: white;
     top: 100px;
+    z-index: 2;
 }
 .navbar-button {
     margin: 50px;
